// -*- mode: proto; indent-tabs-mode: nil; tab-width: 4 -*-

syntax = "proto3";
option java_package = "au.id.micolous.metrodroid.proto";

message LeapDesFireCommand {
    bytes query = 1;
    bytes response = 2;
    bytes expected_response = 3;
}

message LeapKeyValue {
    string key = 3;
    string value = 4;
}

message LeapMessage {
    int32 application_id = 1;
    string session_id = 2;
    string stage = 3;
    repeated LeapDesFireCommand cmds = 4;
    repeated LeapKeyValue keyvalues = 5;
}
